# neuron-game

libs/genetic-algorithm/src/: chromosome.rs  lib.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: lib.rs
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: lib.rs
www/: index.html  index.js
