[package]
name = "lib-simulation-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
getrandom = {version = "0.2", features= ["js"]}
nalgebra = { version = "0.26", features = ["rand-no-std"] }

lib-simulation = { path = "../simulation"}

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
